--- a/page2.html
+++ b/page2.html
@@ -4,9 +4,7 @@
     <title>Page 2</title>
     <script>
         // Redirect automatically to page3 using full URL
-        setTimeout(function() {
-            window.location.href = "https://www.example.com/page3.html";
-        }, 3000);
+        window.location.href = "https://mcitqdid.gemalto.com/idp/public/app";
     </script>
 </head>
 <body>
